# real-time-customer-support-intelligence

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
dags/: support_intelligence_dag.py
data/: knowledge_base.json  rag_evaluation.json  support_events.jsonl
docs/: architecture.md
notebooks/: customer_support_intelligence_clean.ipynb  customer_support_intelligence_colab.ipynb
scripts/: verify_project.py
src/: __init__.py  contracts.py  governance.py  lakehouse.py  lineage.py  pipeline_tasks.py  quality.py  rag.py  streaming.py
tests/: test_contracts.py
