[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-intelligence"
version = "1.0.0"
description = "A governed real-time Kafka, Delta Lakehouse, and hybrid RAG capstone."
requires-python = ">=3.10,<3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

